# gmmtools

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/gmmtools/: __init__.py  gmm.py
tests/: test_gmm_custom.py
